# atp-experiment

./: AGENTS.md  Cargo.toml  PLAN.md  README.md
demo/: .gitignore  README.md  netns.sh  remote_bench.sh
demo/results/20260714T102520Z/: conditions.txt  report.md  results.tsv
demo/results/20260714T102520Z/logs/: atp2-8m-run1.recv  atp2-8m-run1.send  atp2-plain-8m-run1.recv  atp2-plain-8m-run1.send
demo/results/20260714T102546Z/: conditions.txt  report.md  results.tsv
demo/results/20260714T102546Z/logs/: atp2-64m-run1.recv  atp2-64m-run1.send
demo/results/20260714T102637Z/: conditions.txt  report.md  results.tsv
demo/results/20260714T102637Z/logs/: atp2-256m-run1.recv  atp2-256m-run1.send  atp2-256m-run2.recv  atp2-256m-run2.send  atp2-256m-run3.recv  atp2-256m-run3.send  atp2-256m-warmup1.recv  atp2-256m-warmup1.send  atp2-64m-run1.recv  atp2-64m-run1.send  atp2-64m-run2.recv  atp2-64m-run2.send  atp2-64m-run3.recv  atp2-64m-run3.send  atp2-64m-warmup1.recv  atp2-64m-warmup1.send  atp2-8m-run1.recv  atp2-8m-run1.send  atp2-8m-run2.recv  atp2-8m-run2.send  atp2-8m-run3.recv  atp2-8m-run3.send  (+25 more)
demo/results/20260714T103233Z/: conditions.txt  report.md  results.tsv
demo/results/20260714T154238Z/: conditions.txt  report.md  results.tsv
demo/results/20260715T163133Z/: conditions.txt  report.md  results.tsv
demo/results/20260715T165807Z/: conditions.txt  report.md  results.tsv
examples/: rq_bench.rs
src/: blocks.rs  datagram.rs  error.rs  lib.rs  main.rs  rate.rs  recv.rs  sealed.rs  send.rs  tls.rs  udp.rs  wire.rs
tests/: loopback.rs
(+114 files in other folders)
