[package]
name = "atp-experiment"
version = "0.1.0"
edition = "2021"
description = "RaptorQ transmission protocol demo: TLS key exchange, kernel-UDP data plane, fountain-coded loss repair"
license = "AGPL-3.0-or-later"

[dependencies]
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
libc = "0.2"
raptorq = "2"
socket2 = "0.6"
rcgen = "0.13"
# ring provider, TLS 1.3 only (no tls12 feature): the control plane is
# rustls; the data plane is kernel UDP + per-datagram AEAD, not QUIC.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
    "io-util",
    "time",
    "sync",
] }

[profile.release]
debug = true

# RaptorQ (and crypto, later) are unusably slow at opt-level 0; keep
# dependencies optimized even in dev builds so tests run in seconds.
[profile.dev.package."*"]
opt-level = 3
